src/objects/Joint_Business_Plan_Market_Coverage__c.object
<CustomObject>
    <description>R5 - New Custom Object Joint Business Plan Market Coverage</description>
    <fields>
        <fullName>ABB_Product_Lines__c</fullName>
        <description>R5 - ABB Product Lines</description>
        <inlineHelpText>Product mix - content under Market Scope is used as default value. Please edit as needed.</inlineHelpText>
        <label>ABB Product Lines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Growth_Potential__c</fullName>
        <description>R5 - Annual Growth Potential</description>
        <inlineHelpText>in % for the partners’ whole business in this segment</inlineHelpText>
        <label>% Annual Growth Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Available_Market__c</fullName>
        <description>R5 - Available Market</description>
        <label>Available Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Business__c</fullName>
        <description>R5 - % Current Business</description>
        <inlineHelpText>What % this segment represents of the partners total business</inlineHelpText>
        <label>% Current Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Existing_Business__c</fullName>
        <description>R5 - Existing Business</description>
        <label>Existing/Targeted Business</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <!--fields>
        <fullName>Focussed_Industry1__c</fullName>
        <description>R5 - Focussed industry - combination of Industry usage level 1, level2 and level3</description>
        <inlineHelpText>Pick all the industries currently served and targeted in the upcoming 3 years.  Want to add/ remove a focused industry? Do it on &quot;Channel Market Scope&quot; -view and clone the list on Business Plan header -view.</inlineHelpText>
        <label>Focussed Industry</label>
        <picklist>
            <picklistValues>
                <fullName>BLD - BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD - BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD - BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.1 - IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.1 - IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.4 - IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.7 - IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.7 - IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.7 - IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.10 - IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.10 - IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.10 - IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.10 - IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.11 - IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.11 - IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.12 - IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.12 - IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND - IND.12 - IND.12.3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields-->
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 - Joint Business Plan</description>
        <inlineHelpText>Business plan  this market scope is connected to</inlineHelpText>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Market coverages</relationshipLabel>
        <relationshipName>Joint_Business_Plan_Market_Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market_Position__c</fullName>
        <description>R5 - Market Position</description>
        <inlineHelpText>Partner’s position on this market segment today. Do not enter if possible compliance issues.</inlineHelpText>
        <label>Market Position</label>
        <picklist>
            <picklistValues>
                <fullName>Top 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 6 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Share__c</fullName>
        <description>R5 - Market Share</description>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <description>R5 - Other Details</description>
        <inlineHelpText>..concerning ABB business potential in this segment</inlineHelpText>
        <label>Other Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Joint_Business_Plan__r.Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Today__c</fullName>
        <description>R5 - Sales Today</description>
        <inlineHelpText>.. to this segment for the products indicated above</inlineHelpText>
        <label>ABB sales last year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Focus__c</fullName>
        <description>R5 - Special Focus</description>
        <inlineHelpText>e.g. application, sub-segment</inlineHelpText>
        <label>Special Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <description>R5 - Strength</description>
        <inlineHelpText>What are the partners competitive advantages in this segment</inlineHelpText>
        <label>Strengths</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_ABB_this_year_sales__c</fullName>
        <description>R5 - Targeted ABB this year sales</description>
        <inlineHelpText>.. to this segment for the products indicated above</inlineHelpText>
        <label>Targeted ABB sales this year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Targeted_Sales_this_year__c</fullName>
        <description>R5 - Targeted Sales This year</description>
        <inlineHelpText>Main products and services sold today to this segment</inlineHelpText>
        <label>Offering today</label>
        <type>TextArea</type>
    </fields>
    <label>Market Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Joint_Business_Plan__c</columns>
        <columns>Existing_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Market-{000000}</displayFormat>
        <label>Market Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JBP_Status_Closed_Check_MarketCoverage</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Business Plan Status is Closed/Obsolete, then the user should not edit the Market Coverage</description>
        <errorConditionFormula>OR(ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Closed&apos;), 
ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Obsolete&apos;) 
)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed/Obsolete</errorMessage>
    </validationRules>
</CustomObject>